--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,8 @@ dependencies {
   // navigation
   implementation "androidx.navigation:navigation-fragment-ktx:2.1.0-alpha02"
   implementation "androidx.navigation:navigation-ui-ktx:2.1.0-alpha02"
+
+  // viewModel
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
+  implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 }
