--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,16 +27,17 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-  implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+  implementation "androidx.appcompat:appcompat:1.0.0-beta01"
+  implementation "androidx.constraintlayout:constraintlayout:2.0.0-alpha2"
+  implementation "androidx.legacy:legacy-support-v4:1.0.0-beta01"
   testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+  androidTestImplementation "androidx.test:runner:1.1.0-alpha4"
+  androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-alpha4"
 
   // Retrofit
   implementation "com.squareup.retrofit2:retrofit:2.5.0"
   implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+  implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
 
   // Moshi
   implementation "com.squareup.moshi:moshi:1.8.0"
@@ -57,4 +58,7 @@ dependencies {
   // viewModel
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
   implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+
+  // timber
+  implementation "com.jakewharton.timber:timber:4.7.1"
 }
