--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
   // Moshi
   implementation "com.squareup.moshi:moshi:1.8.0"
   implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+  kapt "com.squareup.moshi:moshi-kotlin-codegen:1.8.0"
 
   // Rx
   implementation "io.reactivex.rxjava2:rxjava:2.2.8"
