--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,24 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mzkii.dev.fruitsbasket">
 
-  <uses-permission android:name="android.permission.INTERNET" />
-  
+  <uses-permission android:name="android.permission.INTERNET"/>
+
   <application
       android:name=".App"
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
-      android:label="@string/app_name"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".search.SearchActivity">
+    <activity
+        android:name=".search.SearchActivity"
+        android:label="SearchActivity"
+        >
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name=".result.ResultActivity"/>
+    <activity
+        android:name=".result.ResultActivity"
+        android:label="ResultActivity"
+        />
   </application>
 
 </manifest>
